added styles to the header section

--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
 <body>
   <header>
     <div id="header">
-      <img src="./images/dog-1.jpg" class="header-image">
-      <h1 class="header-text">Loukanikos the riot dog tribute page</h1>
+      <div id="image-section">
+        <img src="./images/dog-1.jpg" class="header-image">
+        <h1 class="header-text">Loukanikos the riot dog</h1>
+      </div>
     </div>
   </header>
 </body>
