added sample tweets, attempted to position tweets in a timeline structure

--- a/index.html
+++ b/index.html
@@ -9,9 +9,27 @@
     <div id="header">
       <div id="image-section">
         <img src="./images/dog-1.jpg" class="header-image">
-        <h1 class="header-text">Loukanikos the riot dog</h1>
+        <h1 class="header-text">Loukanikos the riot dog.</h1>
       </div>
     </div>
   </header>
+  <section>
+    <div class="timeline cd-timeline-content">
+      <blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">Loukanikos - the Greek riot dog. Beaten, kicked &amp; tear-gassed many times by police, and was still active in every riot until his death. <a href="https://t.co/s0spJQgyKU">pic.twitter.com/s0spJQgyKU</a></p>&mdash; Paul Antonopoulos (@oulosP) <a href="https://twitter.com/oulosP/status/806045602266001408">December 6, 2016</a></blockquote>
+      <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+    </div>
+    <div class="timeline cd-timeline-content">
+      <blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">Loukanikos - the Greek riot dog. Beaten, kicked &amp; tear-gassed many times by police, and was still active in every riot until his death. <a href="https://t.co/s0spJQgyKU">pic.twitter.com/s0spJQgyKU</a></p>&mdash; Paul Antonopoulos (@oulosP) <a href="https://twitter.com/oulosP/status/806045602266001408">December 6, 2016</a></blockquote>
+      <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+    </div>
+    <div class="timeline cd-timeline-content">
+      <blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">Loukanikos - the Greek riot dog. Beaten, kicked &amp; tear-gassed many times by police, and was still active in every riot until his death. <a href="https://t.co/s0spJQgyKU">pic.twitter.com/s0spJQgyKU</a></p>&mdash; Paul Antonopoulos (@oulosP) <a href="https://twitter.com/oulosP/status/806045602266001408">December 6, 2016</a></blockquote>
+      <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+    </div>
+    <div class="timeline cd-timeline-content">
+      <blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">Loukanikos - the Greek riot dog. Beaten, kicked &amp; tear-gassed many times by police, and was still active in every riot until his death. <a href="https://t.co/s0spJQgyKU">pic.twitter.com/s0spJQgyKU</a></p>&mdash; Paul Antonopoulos (@oulosP) <a href="https://twitter.com/oulosP/status/806045602266001408">December 6, 2016</a></blockquote>
+      <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+    </div>
+  </section>
 </body>
 </html>
