added a video, floated tweet elements left and right as a second attempt at structuring the timeline

--- a/index.html
+++ b/index.html
@@ -14,22 +14,31 @@
     </div>
   </header>
   <section>
-    <div class="timeline cd-timeline-content">
+    <div class="timeline cd-timeline-content float-left">
+      <p>This is the first Element</p>
       <blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">Loukanikos - the Greek riot dog. Beaten, kicked &amp; tear-gassed many times by police, and was still active in every riot until his death. <a href="https://t.co/s0spJQgyKU">pic.twitter.com/s0spJQgyKU</a></p>&mdash; Paul Antonopoulos (@oulosP) <a href="https://twitter.com/oulosP/status/806045602266001408">December 6, 2016</a></blockquote>
       <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
     </div>
-    <div class="timeline cd-timeline-content">
+    <div class="timeline cd-timeline-content float-right">
+      <p>This is the second element</p>
       <blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">Loukanikos - the Greek riot dog. Beaten, kicked &amp; tear-gassed many times by police, and was still active in every riot until his death. <a href="https://t.co/s0spJQgyKU">pic.twitter.com/s0spJQgyKU</a></p>&mdash; Paul Antonopoulos (@oulosP) <a href="https://twitter.com/oulosP/status/806045602266001408">December 6, 2016</a></blockquote>
       <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
     </div>
-    <div class="timeline cd-timeline-content">
+    <div class="timeline cd-timeline-content float-left">
+      <p>This is the third Element</p>
       <blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">Loukanikos - the Greek riot dog. Beaten, kicked &amp; tear-gassed many times by police, and was still active in every riot until his death. <a href="https://t.co/s0spJQgyKU">pic.twitter.com/s0spJQgyKU</a></p>&mdash; Paul Antonopoulos (@oulosP) <a href="https://twitter.com/oulosP/status/806045602266001408">December 6, 2016</a></blockquote>
       <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
     </div>
-    <div class="timeline cd-timeline-content">
+    <div class="timeline cd-timeline-content float-right">
+      <p>This is the fourth Element</p>
       <blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">Loukanikos - the Greek riot dog. Beaten, kicked &amp; tear-gassed many times by police, and was still active in every riot until his death. <a href="https://t.co/s0spJQgyKU">pic.twitter.com/s0spJQgyKU</a></p>&mdash; Paul Antonopoulos (@oulosP) <a href="https://twitter.com/oulosP/status/806045602266001408">December 6, 2016</a></blockquote>
       <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+    </div>
+    <div class="timeline cd-timeline-content float-left">
+      <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/lSjlFhRRW0g?showinfo=0" frameborder="0" allowfullscreen></iframe>
     </div>
   </section>
+
+    
 </body>
 </html>
