--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <link type="text/css" rel="stylesheet" href="./css/stylesheet.css"/>
+<link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon" />
   <title>Loukanikos the riot dog tribute page</title>
 </head>
 <body>
