--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <link type="text/css" rel="stylesheet" href="./css/stylesheet.css"/>
 <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon" />
+<link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
   <title>Loukanikos the riot dog tribute page</title>
 </head>
 <body>
@@ -14,32 +15,42 @@
       </div>
     </div>
   </header>
-  <section>
-    <div class="timeline cd-timeline-content float-left">
-      <p>This is the first Element</p>
-      <blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">Loukanikos - the Greek riot dog. Beaten, kicked &amp; tear-gassed many times by police, and was still active in every riot until his death. <a href="https://t.co/s0spJQgyKU">pic.twitter.com/s0spJQgyKU</a></p>&mdash; Paul Antonopoulos (@oulosP) <a href="https://twitter.com/oulosP/status/806045602266001408">December 6, 2016</a></blockquote>
-      <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
-    </div>
-    <div class="timeline cd-timeline-content float-right">
-      <p>This is the second element</p>
-      <blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">Loukanikos - the Greek riot dog. Beaten, kicked &amp; tear-gassed many times by police, and was still active in every riot until his death. <a href="https://t.co/s0spJQgyKU">pic.twitter.com/s0spJQgyKU</a></p>&mdash; Paul Antonopoulos (@oulosP) <a href="https://twitter.com/oulosP/status/806045602266001408">December 6, 2016</a></blockquote>
-      <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
-    </div>
-    <div class="timeline cd-timeline-content float-left">
-      <p>This is the third Element</p>
-      <blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">Loukanikos - the Greek riot dog. Beaten, kicked &amp; tear-gassed many times by police, and was still active in every riot until his death. <a href="https://t.co/s0spJQgyKU">pic.twitter.com/s0spJQgyKU</a></p>&mdash; Paul Antonopoulos (@oulosP) <a href="https://twitter.com/oulosP/status/806045602266001408">December 6, 2016</a></blockquote>
-      <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
-    </div>
-    <div class="timeline cd-timeline-content float-right">
-      <p>This is the fourth Element</p>
-      <blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">Loukanikos - the Greek riot dog. Beaten, kicked &amp; tear-gassed many times by police, and was still active in every riot until his death. <a href="https://t.co/s0spJQgyKU">pic.twitter.com/s0spJQgyKU</a></p>&mdash; Paul Antonopoulos (@oulosP) <a href="https://twitter.com/oulosP/status/806045602266001408">December 6, 2016</a></blockquote>
-      <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
-    </div>
-    <div class="timeline cd-timeline-content float-left">
-      <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/lSjlFhRRW0g?showinfo=0" frameborder="0" allowfullscreen></iframe>
-    </div>
-  </section>
+  <section id="cd-timeline" class="cd-container">
+    <div class="cd-timeline-block">
+      <div class="cd-timeline-img cd-picture">
+        <img src="./images/media-color-1_player.svg" alt="picture">
+      </div> <!-- cd-timeline-img -->
 
-    
+      <div class="cd-timeline-content">
+      <blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">Loukanikos - the Greek riot dog. Beaten, kicked &amp; tear-gassed many times by police, and was still active in every riot until his death. <a href="https://t.co/s0spJQgyKU">pic.twitter.com/s0spJQgyKU</a></p>&mdash; Paul Antonopoulos (@oulosP) <a href="https://twitter.com/oulosP/status/806045602266001408">December 6, 2016</a></blockquote>
+      <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+        <span class="cd-date">Dec 6, 2016</span>
+      </div> <!-- cd-timeline-content -->
+    </div> <!-- cd-timeline-block -->
+
+  <div class="cd-timeline-block">
+    <div class="cd-timeline-img cd-picture">
+      <img src="./images/cd-icon-movie.svg" alt="picture">
+    </div> <!-- cd-timeline-img -->
+    <div class="cd-timeline-content">
+    <blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">Loukanikos - the Greek riot dog. Beaten, kicked &amp; tear-gassed many times by police, and was still active in every riot until his death. <a href="https://t.co/s0spJQgyKU">pic.twitter.com/s0spJQgyKU</a></p>&mdash; Paul Antonopoulos (@oulosP) <a href="https://twitter.com/oulosP/status/806045602266001408">December 6, 2016</a></blockquote>
+    <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+      <span class="cd-date">Dec 6, 2016</span>
+    </div> <!-- cd-timeline-content -->
+  </div> <!-- cd-timeline-block -->  
+
+  <div class="cd-timeline-block">
+    <div class="cd-timeline-img cd-picture">
+      <img src="./images/cd-icon-movie.svg" alt="picture">
+    </div> <!-- cd-timeline-img -->
+    <div class="cd-timeline-content">
+    <blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">Loukanikos - the Greek riot dog. Beaten, kicked &amp; tear-gassed many times by police, and was still active in every riot until his death. <a href="https://t.co/s0spJQgyKU">pic.twitter.com/s0spJQgyKU</a></p>&mdash; Paul Antonopoulos (@oulosP) <a href="https://twitter.com/oulosP/status/806045602266001408">December 6, 2016</a></blockquote>
+    <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+      <span class="cd-date">Dec 6, 2016</span>
+    </div> <!-- cd-timeline-content -->
+  </div> <!-- cd-timeline-block -->
+
+
+  </section>   
 </body>
 </html>
