--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <header>
     <div id="header">
       <div id="image-section">
-        <img src="./images/dog-1.jpg" class="header-image">
-        <h1 class="header-text">Loukanikos the riot dog.</h1>
+        <img src="./images/dog-1.jpg">
+        <h1>Loukanikos the riot dog</h1>
       </div>
     </div>
   </header>
