--- a/index.html
+++ b/index.html
@@ -18,13 +18,14 @@
   <section id="cd-timeline" class="cd-container">
     <div class="cd-timeline-block">
       <div class="cd-timeline-img cd-picture">
-        <img src="./images/media-color-1_player.svg" alt="picture">
+        <img src="./images/twitter-snow.svg" alt="picture">
       </div> <!-- cd-timeline-img -->
 
       <div class="cd-timeline-content">
+      <h2>Sample Header</h2>
       <blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">Loukanikos - the Greek riot dog. Beaten, kicked &amp; tear-gassed many times by police, and was still active in every riot until his death. <a href="https://t.co/s0spJQgyKU">pic.twitter.com/s0spJQgyKU</a></p>&mdash; Paul Antonopoulos (@oulosP) <a href="https://twitter.com/oulosP/status/806045602266001408">December 6, 2016</a></blockquote>
       <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
-        <span class="cd-date">Dec 6, 2016</span>
+        <!-- <span class="cd-date">Dec 6, 2016</span> -->
       </div> <!-- cd-timeline-content -->
     </div> <!-- cd-timeline-block -->
 
@@ -35,20 +36,23 @@
     <div class="cd-timeline-content">
     <blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">Loukanikos - the Greek riot dog. Beaten, kicked &amp; tear-gassed many times by police, and was still active in every riot until his death. <a href="https://t.co/s0spJQgyKU">pic.twitter.com/s0spJQgyKU</a></p>&mdash; Paul Antonopoulos (@oulosP) <a href="https://twitter.com/oulosP/status/806045602266001408">December 6, 2016</a></blockquote>
     <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
-      <span class="cd-date">Dec 6, 2016</span>
+     <!--  <span class="cd-date">Dec 6, 2016</span> -->
     </div> <!-- cd-timeline-content -->
   </div> <!-- cd-timeline-block -->  
 
   <div class="cd-timeline-block">
     <div class="cd-timeline-img cd-picture">
-      <img src="./images/cd-icon-movie.svg" alt="picture">
+      <img src="./images/cd-icon-picture.svg" alt="picture">
     </div> <!-- cd-timeline-img -->
     <div class="cd-timeline-content">
     <blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">Loukanikos - the Greek riot dog. Beaten, kicked &amp; tear-gassed many times by police, and was still active in every riot until his death. <a href="https://t.co/s0spJQgyKU">pic.twitter.com/s0spJQgyKU</a></p>&mdash; Paul Antonopoulos (@oulosP) <a href="https://twitter.com/oulosP/status/806045602266001408">December 6, 2016</a></blockquote>
     <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
-      <span class="cd-date">Dec 6, 2016</span>
+    <!--   <span class="cd-date">Dec 6, 2016</span> -->
     </div> <!-- cd-timeline-content -->
   </div> <!-- cd-timeline-block -->
-  </section>   
+  </section> 
+  <footer>
+    
+  </footer>  
 </body>
 </html>
